# SWEN344-web-project

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose-dev.yml  docker-compose-old.yml  docker-compose.yml  docker.nix  init-pgcrypto.sh  package-lock.json  package.json
backend/: Cargo.nix  Cargo.toml  Dockerfile  README.md  build.sh  build_dev.sh  default.nix  docker_build.nix  rustfmt.toml
backend/auth/: Cargo.toml
backend/bf/: Cargo.toml
backend/db/: Cargo.toml
backend/pool/: Cargo.toml
backend/selenium/: Cargo.toml
backend/server/: Cargo.toml
backend/server/src/: adaptive.rs  auth.rs  config.rs  error.rs  lib.rs  main.rs  server_auth.rs  state.rs  static_files.rs  util.rs
backend/server/src/api/: advertisement.rs  auth.rs  calendar.rs  market.rs  mod.rs  twitter_proxy.rs  user.rs
backend/server/src/testing_fixtures/: mod.rs  user.rs
backend/server/templates/: login.html
backend/testing_common/: Cargo.toml
backend/wasm_calls/: Cargo.toml  index.js  package-lock.json
backend/wasm_calls/js/: index.js  package-lock.json  wasm_calls.d.ts  wasm_calls.js  wasm_calls_bg.d.ts  wasm_calls_bg.wasm  webpack.config.js
backend/wasm_calls/src/: lib.rs
backend/wire/: Cargo.toml
backend/wire/src/: lib.rs
data/nginx/: app.conf
documentation/: API.md  BugTracking.md  DesignDocument.md  Dockerfile  Requirements.md  SubmissionReadme.md  rust_typescript_resources.md
documentation/deriverables/: Requirements.md
frontend/: Dockerfile  package-lock.json  package.json
frontend_backup/: README.md  package-lock.json
(+76 files in other folders)
