[package]
name = "server"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
edition = "2018"

[dependencies]
warp = "0.1.11"
apply = "0.2.2"
clap = "2.32.0"
log = "0.4.6"
env_logger = "0.6.0"
serde = {version="1.0.85", features=["derive"]}
db = {path="../db"}
testing_common = {path="../testing_common"}
uuid = {version = "0.6.*", features=["v4"]}
serde_json = "1.0.37"
frank_jwt = "3.1.0"
chrono = "0.4.6"
diesel = "1.4.1"
bytes = "0.4.11"
pool = {path="../pool"}

