[package]
name = "wire"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = {version="1.0.85", features=["derive"]}
wasm-typescript-definition = { git = "https://github.com/tcr/wasm-typescript-definition",  branch = "master" }
wasm-bindgen = "0.2.*"
